Organização de Arquivos

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="variaveis-globais.js"></script> //colocar sempre tudo por ordem para evitar erros de variáveis não definidas quando iniciarmos
+    <script src="embaralhar-dividir.js"></script>
+    <script src="descobrir-comparar.js"></script>
+    <script src="acerto-erro.js"></script>
+    <script src="iniciar.js"></script>
 </body>
 </html>
