--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </main>
 
-    <script src="variaveis-globais.js"></script> //colocar sempre tudo por ordem para evitar erros de variáveis não definidas quando iniciarmos
+    <script src="variaveis-globais.js"></script> 
     <script src="embaralhar-dividir.js"></script>
     <script src="descobrir-comparar.js"></script>
     <script src="acerto-erro.js"></script>
