--- a/index.html
+++ b/index.html
@@ -55,6 +55,25 @@
         </div>
     </main>
 
+    <audio
+        src="sons/acierto.mp3"
+        class="som"
+        id="som-acerto"
+        preload="auto"
+    ></audio>
+    <audio
+        src="sons/error.mp3"
+        class="som"
+        id="som-erro"
+        preload="auto"
+    ></audio>
+    <audio
+        src="sons/carta.mp3"
+        class="som"
+        id="som-cartao"
+        preload="auto"
+    ></audio>
+
     <script src="variaveis-globais.js"></script> 
     <script src="embaralhar-dividir.js"></script>
     <script src="descobrir-comparar.js"></script>
